examples/test/testpolicy7104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7104
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key27: value2
      key39: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value27
          key13: value13
          key11: value14
      podSelector:
        matchLabels:
          key13: value32
          key39: value10
